--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -39,6 +39,16 @@
   100% { transform: translateY(0px); }
 }
 
+.hero__title {
+  font-size: 5rem;
+}
+
+@media screen and (max-width: 600px) {
+  .hero__title {
+    font-size: 3rem;
+  }
+}
+
 .features {
   display: flex;
   align-items: center;
